# ProgrammingLanguage

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
documentation/: Doxyfile
documentation/Compiler/: Doxyfile
documentation/Language/: Grammar.tex  Grammar.text  Main.tex  Makefile  Preprocessor.tex
examples/: Fib  Preprocessor110
include/: AST.hpp  ActionTree.hpp  ByteCode.hpp  ByteCodeSerializer.hpp  Commands.hpp  Compiler.hpp  Error.hpp  File.hpp  Functions.hpp  Imports.hpp  Interpreter.hpp  Logger.hpp  Module.hpp  Node.hpp  Parser.hpp  Preprocessor.hpp  Stack.hpp  Tokenizer.hpp  Tokens.hpp  Types.hpp  VM.hpp
modules/: CMakeLists.txt  stdlib.cpp  testlib.cpp
src/: AST.cpp  ActionTree.cpp  ByteCode.cpp  Commands.cpp  Compiler.cpp  Functions.cpp  Imports.cpp  Interpreter.cpp  Parser.cpp  Preprocessor.cpp  Tokenizer.cpp  Tokens.cpp  Types.cpp  VM.cpp  main.cpp
tests/: CMakeLists.txt
tests/inputs/Preprocessor/: f1  f2  f3  f4  f5
tests/src/File/: BasicFunctions.cpp
tests/src/Preprocessor/: Defines.cpp  Directives.cpp  Include.cpp  Macro.cpp
